Integer(int value) and Integer(String s) deprecated starting from JDK 9.